# tia-portal-translator

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  TIAProjectTexts.xlsx  TIAProjectTexts_translated.xlsx  main.py  pyproject.toml  requirements.txt  tia_portal_translator.py
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
cli/: __init__.py  main.py
core/: __init__.py  translator.py  utils.py
deprecated/: README.md
deprecated/legacy/: tia_portal_translator.py
fixtures/: TIAProjectTexts_sample.xlsx
gui/: __init__.py  app.py
readers/: excel_reader.py
scripts/: generate_sample_fixture.py
services/: base.py  deepl.py  google_trans_free.py  openai.py
src/tia_portal_translator/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/tia_portal_translator/cache/: __init__.py  base.py  entry.py  factory.py  file.py  hybrid.py  manager.py  memory.py  sqlite.py
src/tia_portal_translator/readers/: __init__.py  excel_reader.py
src/tia_portal_translator/services/: __init__.py  base.py  deepl_service.py  factory.py  google_cloud_service.py  google_free_service.py  openai_service.py
src/tia_portal_translator/writers/: __init__.py  excel_writer.py
tests/: README.md  conftest.py  test_cache.py  test_cache_shim.py  test_cli.py  test_config.py  test_excel_reader.py  test_excel_writer.py  test_line_wrapping.py  test_openai_injection.py  test_pipeline.py  test_services.py  test_smoke_cli_e2e.py
tokenizer/: base.py  token_counter.py
