[project]
name = "tia-portal-translator"
version = "0.1.0"
description = "Translator for TIA Portal Excel exports"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "openpyxl>=3.1.0",
    "openai>=1.0.0",
    "tenacity>=8.2.0",
    "deepl>=1.15.0",
    "google-cloud-translate>=3.12.0",
    "googletrans==4.0.2",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.2",
    "python-dotenv>=1.0.0",
    "platformdirs>=4.2.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]
extend-exclude = [
    "__pycache__",
    "fixtures",
    "translation_cache.db",
    "TIAProjectTexts.xlsx",
    "TIAProjectTexts_translated.xlsx",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PIE"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tia_portal_translator"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
    "asyncio_throttle.*",
    "deepl.*",
    "google.*",
    "googletrans.*",
    "openai.*",
    "openpyxl.*",
    "platformdirs.*",
    "dotenv.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -W error --cov=tia_portal_translator --cov-report=term-missing"
asyncio_mode = "auto"
